# lagrangian_neural_networks

./: .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/: double_pendulum.ipynb
src/lagrangian_nns/: __init__.py  lnn.py  plotting.py
src/lagrangian_nns/experiment_dblpend/: __init__.py  data.py  physics.py  train.py
src/lagrangian_nns/hyperopt/: HyperparameterSearch.py
