[metadata]
name = Lagrangian Neural Networks
version = 0.0.1
author = Y. Natsume
author_email = None
description = Implementation of Lagrangian Neural Networks from https://arxiv.org/pdf/2003.04630.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/lagrangian_neural_networks
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/lagrangian_neural_networks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    tqdm
    jax
    matplotlib

[options.packages.find]
where = src
